--- a/assets/phone.css
+++ b/assets/phone.css
@@ -155,3 +155,10 @@
   .imprint {
     display: none;
   }
+
+    .pageLevel {
+      font-size: 11px;
+      font-weight: 400;
+      line-height: 15px;
+      color: #F55050;
+    }
